force-app/main/default/objects/Contact/fields/Cargo_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Cargo_de_Contacto__c</fullName>
    <label>Cargo de Contacto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>