force-app/main/default/objects/Contact/fields/Correo_Electr_nico_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electr_nico_de_Contacto__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Correo Electrónico</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>