force-app/main/default/objects/Contact/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais_de_residencia__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>Antioquia</fullName>
            </value>
            <value>
                <fullName>Arauca</fullName>
            </value>
            <value>
                <fullName>Archipiélago de San Andrés, Providencia y Santa Catalina</fullName>
            </value>
            <value>
                <fullName>Atlántico</fullName>
            </value>
            <value>
                <fullName>Bogotá D.C.</fullName>
            </value>
            <value>
                <fullName>Bolívar</fullName>
            </value>
            <value>
                <fullName>Boyacá</fullName>
            </value>
            <value>
                <fullName>Caldas</fullName>
            </value>
            <value>
                <fullName>Caquetá</fullName>
            </value>
            <value>
                <fullName>Casanare</fullName>
            </value>
            <value>
                <fullName>Cauca</fullName>
            </value>
            <value>
                <fullName>Cesar</fullName>
            </value>
            <value>
                <fullName>Chocó</fullName>
            </value>
            <value>
                <fullName>Córdoba</fullName>
            </value>
            <value>
                <fullName>Cundinamarca</fullName>
            </value>
            <value>
                <fullName>Guainía</fullName>
            </value>
            <value>
                <fullName>Guaviare</fullName>
            </value>
            <value>
                <fullName>Huila</fullName>
            </value>
            <value>
                <fullName>La Guajira</fullName>
            </value>
            <value>
                <fullName>Magdalena</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Nariño</fullName>
            </value>
            <value>
                <fullName>Norte de Santander</fullName>
            </value>
            <value>
                <fullName>Putumayo</fullName>
            </value>
            <value>
                <fullName>Quindío</fullName>
            </value>
            <value>
                <fullName>Risaralda</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>Sucre</fullName>
            </value>
            <value>
                <fullName>Tolima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>