force-app/main/default/objects/Contact/fields/Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n__c</fullName>
    <label>Dirección</label>
    <length>80</length>
    <type>Text</type>
</CustomField>