force-app/main/default/objects/Contact/fields/Fecha_de_Cumplea_os__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cumplea_os__c</fullName>
    <label>Fecha de Cumpleaños</label>
    <type>Date</type>
</CustomField>