force-app/main/default/objects/Contact/fields/Pais_de_residencia__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_residencia__c</fullName>
    <label>País de Residencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colombia</fullName>
                <default>true</default>
                <label>Colombia</label>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>