force-app/main/default/objects/Contact/fields/Tel_fono_PBX__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_PBX__c</fullName>
    <label>Teléfono (PBX)</label>
    <type>Phone</type>
</CustomField>