force-app/main/default/objects/Contact/validationRules/Nuevo_Contacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Nuevo_Contacto</fullName>
    <active>false</active>
    <description>Reglas para crear un nuevo contacto</description>
    <errorConditionFormula>OR( ISBLANK( FirstName ), ISBLANK(  LastName ), ISBLANK(  Cargo_de_Contacto__c ), ISBLANK(  Tel_fono_de_Contacto__c ), ISBLANK(  Correo_Electr_nico_de_Contacto__c ))</errorConditionFormula>
    <errorMessage>Debe diligenciar los siguientes campos para crear un contacto nuevo: Nombre, Apellido, Cargo del Contacto, Teléfono de Contacto y Correo Electrónico de Contacto.</errorMessage>
</ValidationRule>