force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Cargo_de_Contacto__c</columns>
    <columns>Celular_de_Contacto__c</columns>
    <columns>Correo_Electr_nico_de_Contacto__c</columns>
    <columns>C_mo_Conoci_Thermoandina__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>Mis contactos</label>
</ListView>